# chessengine

./: Cargo.toml
.github/workflows/: tests.yml
cli/: Cargo.toml
cli/src/: main.rs  render.rs
game/: Cargo.toml
game/src/: board.rs  board_fen.rs  board_movements.rs  board_validation.rs  constants.rs  fen.rs  lib.rs  pieces.rs  setup.rs  square.rs
game/tests/: move_validation.rs
game/tests/boards/: check_through_piece.fen  e3.fen  e6.fen  empty_knight.fen  en_passant.fen  en_passant_expired.fen  knight_boxed.fen  pinned_pawn.fen
server/: Cargo.toml
server/chess-ui/: README.md  package-lock.json  package.json
server/chess-ui/src/: App.vue
server/chess-ui/src/assets/: base.css  chessground.css  theme.css
server/chess-ui/src/components/: HelloWorld.vue
server/chess-ui/src/service/: api.js
server/src/: main.rs
server/src/app/: filters.rs  game_server.rs  handlers.rs  mod.rs
