[package]
name = "server"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
game = {path = "../game"}
serde = {version = "1", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}
warp = "0.2"
